# Carta-Genius

./: AUTHORS  ChangeLog  INSTALL-en  INSTALL-fr  Makefile  NEWS  README-fr  README.creole  TODO  configure  configure.in
doc/english/1.user-guide/: sorry.txt
doc/english/2.examples/: 01-first_step.cgml  02-box.cgml  03-round_box.cgml  04-circle.cgml  05-line.cgml  06-dash.cgml  07-grid.cgml  08-hexagon.cgml  09-bezier.cgml  10-polygon.cgml  11-text.cgml  12-text_align.cgml  13-text_space.cgml  14-text_border.cgml  15-text_border_margin.cgml  16-text_rotation.cgml  17-text_adaptation.cgml  18-text_fonts.cgml  19-texte_line.cgml  20-text_ladder.cgml  21-text_default.cgml  22-text_space.cgml  24-formatted_text.cgml  25-image.cgml  26-image_adapt.cgml  27-image_multiple.cgml  28-image_transparency.cgml  29-image_mask.cgml  30-advanced_image_mask.cgml  31-hidden_ditch.cgml  32-hidden_ditch_cut_lines.cgml  33-cards_space.cgml  34-template.cgml  35-templates_multiple.cgml  36-templates_cascading.cgml  38-cards_back.cgml  39-opacity.cgml  40-blendmode.cgml  41-expressions.cgml  (+13 more)
gui/carta-gui/: carta-gui.ini
include/: pdflib.h
install/windows/: installer.nsi
lib/: Makefile  cygwin1.dll.bz2  libpdf.a.linux.bz2  libpdf.a.macosx.bz2  libpdf.a.windows.bz2  liby.a.linux.bz2  liby.a.windows.bz2
lib/y/: Makefile  ydom.c  ydom.h  ysax.c  ystr.c  ystr.h  yvalue.c  yvalue.h
resources/: COPYING  inc_cardcase.xml  pandocreon-symbol-0.4.0.afm  pandocreon-symbol-0.4.0.pfa
src/: Makefile  card.c  cartagenius.h  conf.c  document.c  expr.c  main.c  paper.c  text_define.c
(+106 files in other folders)
