dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS(mkdir strstr)

dnl Check for PDFLib
AC_CHECK_HEADER(pdflib.h, , echo "Can't find PDFLib header"; exit)
AC_CHECK_LIB(pdf, PDF_new, , echo "Can't find PDFLib file"; exit)

dnl AC_OUTPUT(src/Makefile)
